# PetruTerm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: audit.toml
.context/architecture/: SYSTEM_MAP.md
.context/core/: ACTIVE_CONTEXT.md  SESSION_STATE.md
.context/quality/: PROFILING.md  TECHNICAL_DEBT.md  TECHNICAL_DEBT_archive.md
.context/specs/: build_phases.md  build_phases_archive.md  term_specs.md  ui_restyle.md  warp_ui_improvements.md
.criterion-baselines/build_frame_hit/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/build_frame_miss/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/build_row_hit/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/build_row_miss/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/rasterize_glyph_ascii/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/rasterize_line_ascii/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/rasterize_line_ligatures/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/rasterize_line_unicode/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/search_incremental_extend_e_to_error/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/shape_line_ascii/master/: benchmark.json  estimates.json  sample.json  tukey.json
.criterion-baselines/shape_line_ascii_cached/master/: benchmark.json  estimates.json  sample.json  (+1 more)
.github/workflows/: ci.yml  release.yml
assets/themes/: catppuccin-mocha.lua  dracula-pro.lua  gruvbox-dark.lua  one-dark.lua  tokyo-night.lua
benches/: build_instances.rs  rasterize.rs  search.rs  shaping.rs
config/default/: config.lua  keybinds.lua  llm.lua  mcp.json  notifications.lua  perf.lua  snippets.lua  ui.lua
locales/: en.toml  es.toml
scripts/: build_pgo.sh  bundle.sh  ci-local.sh  gen_icon.swift  shell-integration.zsh
src/: app.rs  i18n.rs  lib.rs  main.rs
src/app/: app_state.rs  frame.rs  hover_link.rs  input.rs  layout.rs  menu.rs  mod.rs  mux.rs  renderer.rs  ui.rs
src/config/: lua.rs  mod.rs  schema.rs  watcher.rs
src/font/: freetype_lcd.rs  loader.rs  locator.rs  mod.rs  shaper.rs
src/llm/: agent_action.rs  ai_block.rs  chat_panel.rs  copilot.rs  diff.rs  markdown.rs  mod.rs  openai_compat.rs  openrouter.rs  shell_context.rs  skills.rs  steering.rs  tools.rs
src/platform/: battery.rs  mod.rs  notifications.rs
src/renderer/: atlas.rs  cell.rs  gpu.rs  lcd_atlas.rs  mod.rs  pipeline.rs  rounded_rect.rs  ui_style.rs
src/term/: blocks.rs  color.rs  flag_db.rs  input_shadow.rs  mod.rs  osc133.rs  pty.rs  tokenizer.rs
src/ui/: context_menu.rs  info_overlay.rs  mod.rs  panes.rs  search_bar.rs  sidebar.rs  status_bar.rs  tabs.rs
(+66 files in other folders)
