[package]
name = "petruterm"
version = "0.1.0"
edition = "2021"
description = "A developer-first GPU-accelerated terminal emulator"
license = "MIT"

[[bin]]
name = "petruterm"
path = "src/main.rs"

[lib]
name = "petruterm"
path = "src/lib.rs"

[features]
profiling = ["tracing", "tracing-subscriber"]

[dependencies]
# Profiling / tracing (optional, enabled by --features profiling)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

# GPU rendering
wgpu = "29"
pollster = "0.3"

# Windowing
winit = "0.30"

# Terminal emulation core
alacritty_terminal = "0.25"

# Font shaping and rendering
cosmic-text = "0.18"

# FreeType LCD subpixel rasterization (TD-026c)
freetype = "0.7"

# Font discovery for LCD AA (any system font)
font-kit = "0.14"

# Lua 5.4 config DSL
mlua = { version = "0.11", features = ["lua54", "vendored"] }

# Async runtime (LLM, file I/O)
tokio = { version = "1", features = ["full"] }

# HTTP client for LLM providers
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async trait support (object-safe async fn in traits)
async-trait = "0.1"

# Stream utilities for SSE / token streaming
futures-util = "0.3"

# Config hot-reload
notify = "8"

# Regular expressions for sanitization
regex = "1"

# Command palette fuzzy search
fuzzy-matcher = "0.3"

# LRU cache for word_cache in font shaper (TD-MEM-05)
lru = "0.12"

# GPU buffer casting
bytemuck = { version = "1", features = ["derive"] }

# Config directory resolution
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Secure storage for secrets (API keys)
secrecy = { version = "0.10", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY reader thread ↔ main thread comms
crossbeam-channel = "0.5"

# System clipboard (copy/paste + OSC 52)
arboard = "3"

# Logging
log = "0.4"
env_logger = "0.11"

# Memory allocator (faster than system malloc on macOS — TD-PERF-14)
mimalloc = { version = "0.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSView", "NSApplication"] }
objc2-foundation = "0.2"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "shaping"
harness = false

[profile.dev]
opt-level = 1

# Local-only profile with native CPU optimisations.
# Use: cargo build --profile release-native
# WARNING: the resulting binary is NOT portable across machines.
# To avoid hard-coding the CPU target, pass the rustflag at the command line:
#   RUSTFLAGS="-C target-cpu=native" cargo build --profile release-native
[profile.release-native]
inherits = "release"
